<resources>
    <string name="app_name">AgriCurify</string>
    <string name="title_home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="agricurify">AgriCurify</string>
    <string name="desc">Tanaman sehat, panen optimal. Kenali gejala penyakit dari daun tanaman Anda dengan cepat</string>
    <string name="lets_start">Ayo Mulai</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prakiraan_cuaca">Prakiraan Cuaca</string>
    <string name="riwayat_penyakit_tumbuhan">Riwayat Penyakit Tumbuhan</string>
    <string name="contentdesc_edit">Edit</string>
    <string name="name">Nama Lengkap</string>
    <string name="email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="detail">Detail</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="note">Note :</string>
    <string name="note_message">Saat ini aplikasi AgriCurify hanya bisa untuk buah-buahan tertentu seperti Apel, Anggur, dan Tomat.</string>
    <string name="scan">Scan</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="sign">Sign</string>
    <string name="in">In</string>
    <string name="up">Up</string>
    <string name="welcome">Selamat Datang</string>
    <string name="Silahkan">Silahkan masuk dengan akun yang telah terdaftar</string>
    <string name="Blum_punya_akun">Belum Punya Akun?</string>
    <string name="SignIn">Masuk</string>
    <string name="SignUp">Daftar</string>
    <string name="sdh_punya_akun">Sudah Punya Akun?</string>
    <string name="slmt">Selamat datang di AgriCurify! Silahkan lengkapi data dibawah ini!</string>
    <string name="logout">Logout</string>
    <string name="crop_image">Crop gambar</string>
    <string name="crop_error_message">Crop gagal: %1$s</string>
    <string name="empty_image_warning">Silahkan pilih gambar terlebih dahulu</string>
    <string name="default_file_name">Image</string>
    <string name="upload_error_message">Gagal mengupload gambar</string>
    <string name="select_item_warning">Pilih jenis buah terlebih dahulu</string>
    <string name="downloading_model_fail">Model gagal diunduh</string>
    <string name="team_name">C242-PS224 Team</string>
    <string name="logo_app">logo app</string>
    <string name="history">Riwayat</string>
    <string name="history_kosong">Riwayat Kosong</string>
    <string name="penaganan_penyakit">Penanganan Penyakit :</string>
    <string name="preview_gambar">Preview Gambar</string>
    <string name="textview">TextView</string>
    <string name="translate">Translate</string>
    <string name="preview_gambar2">Preview Gambar</string>
    <string name="image">Image</string>
    <string name="attach_file">Attach File</string>
    <string name="open_camera">Open Camera</string>
    <string name="pilih_jenis_buah">Pilih Jenis Buah</string>
    <string name="view_all">View all</string>
    <string name="tgl">Senin, 11 November 2024</string>
    <string name="suhu">31°C</string>
    <string name="kelembapan">Kelembapan: 70%</string>
    <string name="hari">Senin</string>
    <string name="empty_warning">Field ini tidak boleh kosong</string>
    <string name="save">Simpan</string>
    <string name="password_confirm">Konfirmasi Password</string>
    <string name="new_pass">Password Baru</string>
    <string name="old_pass">Password Lama</string>
    <string name="change_pass">Ubah Password</string>
    <string name="back_btn">tombol kembali</string>
    <string name="delete_btn">tombol hapus</string>
    <string name="scan_cam">pindai</string>
    <string name="profile_pic">foto profil</string>
    <string name="location">Makassar, Indonesia</string>
    <string name="weather_pic">gambar cuaca</string>
</resources>
